--- a/my-app/src/component/about/about.css
+++ b/my-app/src/component/about/about.css
@@ -35,7 +35,7 @@
 }
 
 .about__card {
-	background: var(--color-bg-variant);
+	background: var(--color--primary);
 	border: 1px solid transparent;
 	border-radius: 1rem;
 	text-align: center;
@@ -43,13 +43,13 @@
 }
 
 .about__card:hover {
-	background: transparent;
-	border-color: var(--color-primary-variant);
+	background: var(--color-bg-variant);
+	border-color: var(--color--primary);
 	cursor: default;
 }
 
 .about__icon {
-	color: var(--color-primary);
+	color: var(--color-white);
 	font-size: 1.4rem;
 	margin-bottom: 1rem;
 }
@@ -60,7 +60,7 @@
 
 .about__card small {
 	font-size: 0.7rem;
-	color: var(--color-light);
+	color: var(--color-white);
 }
 
 .about__content p {
