--- a/my-app/src/component/header/header.css
+++ b/my-app/src/component/header/header.css
@@ -38,6 +38,25 @@ header {
 	background: var(--color--primary);
 }
 
+/* ===================== LOGO ===================== */
+.logo {
+	height: 120px;
+	width: 120px;
+	position: absolute;
+	left: 0rem;
+	top: 0rem;
+	margin-left: 0%;
+	margin-top: 0%;
+	margin-bottom: 0%;
+	margin-right: 0%;
+	/* background-color: grey; */
+	/* border-radius: 70px; */
+	/* box-shadow: 0px 0px 22px rgba(0, 0, 0, 0.3);	 */
+	/* border-radius: 12rem 12rem 0 0; */
+	/* overflow: hidden; */
+	padding: 0rem 0rem 0rem 0rem;
+}
+
 /* ===================== ME ===================== */
 .me {
 	background: linear-gradient(var(--color--primary), transparent);
@@ -60,6 +79,7 @@ header {
 	transform: rotate(90deg);
 	font-weight: 100;
 	font-size: 0.9rem;
+	/* box-shadow: 0px 0px 22px rgba(0, 0, 0, 0.3);	 */
 }
 
 /* ===================== MEDIA QUERIES (MEDIUM) TABLET SCREENS ===================== */
