--- a/my-app/src/component/nav/nav.css
+++ b/my-app/src/component/nav/nav.css
@@ -31,3 +31,13 @@ nav a.active {
 	background: var(--color-bg);
 	color: var(--color-white);
 }
+
+/* ==================== MEDIA QUERIES (MEDIUM) TABLET SCREENS ================ */
+@media screen and (max-width: 10224px) {
+
+}
+
+/* ==================== MEDIA QUERIES (SMALL) MOBILE SCREENS ================ */
+@media screen and (max-width: 600px) {
+
+}
