--- a/my-app/src/component/portfolio/portfolio.css
+++ b/my-app/src/component/portfolio/portfolio.css
@@ -5,7 +5,7 @@
 }
 
 .portfolio__item {
-	background: var(--color-bg-variant);
+	/* background: var(--color-bg-variant); */
 	padding: 1.3rem;
 	border-radius: 0.2rem;
 	border: 1px solid transparent;
@@ -13,8 +13,9 @@
 }
 
 .portfolio__item:hover {
-	border-color: var(--color-bg-variant);
-	background: transparent;
+	background: var(--color-bg-variant);
+	border-color: var(--color--primary);
+	/* background: transparent; */
 }
 
 .portfolio__item-image {
